2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-sfs
  namespace: default
spec:
  serviceName: mongo
  replicas: 4
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        selector: mongo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: mongo
        image: docker.io/mongodb:4.2
        command: ["/bin/sh"]
        args: ["-c", "mongod --replSet=rs0 --bind_ip_all"]
        ports:
          - name: mongo-port
            containerPort: 27017
      volumeMounts:
      - name: mongo-volume
        mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: csi-gce-pd-mongo
        volumeMode: Filesystem
        resources:
          requests:
            storage: 10Gi
