fms.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-k8s-front
  labels:
    app: mern-k8s
    component: front
spec:
  selector:
    component: front
  ports:
    - port: 81
      targetPort: 80
      protocol: TCP
      name: http
