ii.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-k8s-back
  namespace: default
spec:
  ingressClassName: ngrok
  rules:
  - host: mern-k8s-back-ct2uzabw.ngrok.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-k8s-back
            port:
              number: 80
