ingress01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: 34.120.69.217
spec:
  rules:
    - host: api.googlecloudcorner.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-k8s-back
                port:
                  number: 80
    - host: "googlecloudcorner.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-k8s-front
                port:
                  number: 80
  ingressClassName: nginx
